--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -76,8 +75,11 @@
         errorDiv.textContent = "";  // Clear error if validation passes
       }
 
-      // Submit data to Google Sheets via Google Apps Script
-      fetch('https://script.google.com/macros/s/AKfycbzf0LAtH4AdosZ7Eac8dAxUIFdBLjJv1UGUpz5yBLqI7c-zK6ro0qdSwImVIkltHeiQqQ/exec', {
+      // Submit data to Google Sheets via CORS Anywhere proxy and Google Apps Script
+      const corsAnywhereUrl = 'https://cors-anywhere.herokuapp.com/';  // CORS Anywhere proxy
+      const scriptUrl = 'https://script.google.com/macros/s/AKfycbzf0LAtH4AdosZ7Eac8dAxUIFdBLjJv1UGUpz5yBLqI7c-zK6ro0qdSwImVIkltHeiQqQ/exec';
+
+      fetch(corsAnywhereUrl + scriptUrl, {
         method: 'POST',
         body: JSON.stringify({ brand, url }),
         headers: {
