--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       fetch(scriptUrl, {
         redirect: "follow",
         method: 'POST',
-        mode: 'no-cors'
+        mode: 'no-cors',
         body: JSON.stringify({ brand, url }),
         headers: {
           'Content-Type': 'application/json'
