--- a/index.html
+++ b/index.html
@@ -4,41 +4,83 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Submit Brand and File Share Link</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: 'Poppins', sans-serif;  /* Modern font */
+      background-color: #f4f7f6;  /* Light background for better contrast */
+      margin: 0;
+      padding: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
     }
+
     form {
-      margin: 50px auto;
-      width: 300px;
-      padding: 20px;
-      border: 1px solid #ccc;
-      border-radius: 5px;
+      background-color: white;
+      padding: 30px;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      max-width: 400px;
+      width: 100%;
+      box-sizing: border-box;
     }
+
     label {
+      font-weight: 500;
+      margin-bottom: 5px;
       display: block;
-      margin-bottom: 10px;
     }
+
     input[type="text"], input[type="url"] {
       width: 100%;
-      padding: 8px;
-      margin-bottom: 15px;
+      padding: 12px;
+      margin-bottom: 20px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      box-sizing: border-box;
+      font-size: 16px;
+      font-family: 'Poppins', sans-serif;
     }
+
+    input:focus {
+      outline: none;
+      border-color: #28a745;  /* Green border on focus */
+    }
+
     button {
-      padding: 10px 15px;
-      background-color: #28a745;
+      width: 100%;
+      padding: 12px;
+      background-color: #ff69b4;  /* Pink button */
       color: white;
       border: none;
       border-radius: 5px;
+      font-size: 16px;
       cursor: pointer;
+      font-weight: 500;
     }
+
+    button:hover {
+      background-color: #ff4081;  /* Darker pink on hover */
+    }
+
     button:disabled {
       background-color: #ccc;
       cursor: not-allowed;
     }
+
     .error {
       color: red;
-      margin-bottom: 10px;
+      margin-bottom: 15px;
+      font-size: 14px;
+    }
+
+    /* Mobile responsiveness */
+    @media (max-width: 600px) {
+      form {
+        padding: 20px;
+      }
     }
   </style>
 </head>
