--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     input:focus {
       outline: none;
-      border-color: #28a745;  /* Green border on focus */
+      border-color: #ff69b4;  /* Green border on focus */
     }
 
     button {
