--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Submit Brand and File Share Link</title>
+  <!-- Google Fonts for modern typography -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
   <style>
     body {
@@ -46,7 +47,7 @@
 
     input:focus {
       outline: none;
-      border-color: #ff69b4;  /* Green border on focus */
+      border-color: #ff69b4;  /* pink border on focus */
     }
 
     button {
@@ -76,6 +77,12 @@
       font-size: 14px;
     }
 
+    .success {
+      color: green;
+      margin-bottom: 15px;
+      font-size: 14px;
+    }
+
     /* Mobile responsiveness */
     @media (max-width: 600px) {
       form {
@@ -87,13 +94,16 @@
 <body>
 
   <form id="submissionForm">
+    <h2>Submit Brand Info</h2>
+
     <label for="brand">Brand Name</label>
-    <input type="text" id="brand" name="brand" required>
+    <input type="text" id="brand" name="brand" placeholder="Enter brand name" required>
 
     <label for="url">File Share Link</label>
-    <input type="url" id="url" name="url" required>
+    <input type="url" id="url" name="url" placeholder="Enter file share link" required>
 
     <div id="error" class="error"></div>
+    <div id="successMessage" class="success" style="display: none;"></div> <!-- Success message div -->
 
     <button type="submit" id="submitBtn">Submit</button>
   </form>
@@ -105,6 +115,7 @@
       const brand = document.getElementById('brand').value;
       const url = document.getElementById('url').value;
       const errorDiv = document.getElementById('error');
+      const successDiv = document.getElementById('successMessage');  // Success message div
       
       // URL validation for Google Drive, Dropbox, SharePoint
       const validDomains = ['drive.google.com', 'dropbox.com', 'sharepoint.com'];
@@ -112,6 +123,7 @@
 
       if (!validDomains.some(domain => urlDomain.includes(domain))) {
         errorDiv.textContent = "Invalid URL. Please use Google Drive, Dropbox, or SharePoint.";
+        successDiv.style.display = 'none';  // Hide success message
         return;
       } else {
         errorDiv.textContent = "";  // Clear error if validation passes
@@ -122,16 +134,16 @@
       fetch(scriptUrl, {
         redirect: "follow",
         method: 'POST',
-        mode: 'no-cors',  // no-cors limits access to the response body
+        mode: 'no-cors',
         body: JSON.stringify({ brand, url }),
         headers: {
           'Content-Type': 'application/json'
         }
       })
       .then(() => {
-        // Since 'no-cors' mode doesn't allow you to access the response, just assume success
-        alert('Submission successful!');
-        document.getElementById('submissionForm').reset();
+        successDiv.textContent = "Submission successful!";  // Show success message
+        successDiv.style.display = 'block';  // Make success message visible
+        document.getElementById('submissionForm').reset();  // Reset form
       })
       .catch(error => {
         console.error('Error:', error);
