--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
     <h2>Submit Brand Info</h2>
 
     <label for="brand">Brand Name</label>
-    <input type="text" id="brand" name="brand" placeholder="Enter brand name" required>
+    <input type="text" id="brand" name="brand" placeholder="" required>
 
     <label for="url">File Share Link</label>
-    <input type="url" id="url" name="url" placeholder="Enter file share link" required>
+    <input type="url" id="url" name="url" placeholder="" required>
 
     <div id="error" class="error"></div>
     <div id="successMessage" class="success" style="display: none;"></div> <!-- Success message div -->
