--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 <body>
 
   <form id="submissionForm">
-    <h2>Submit Brand Info</h2>
+    <h2>Image Folder Submission</h2>
 
     <label for="brand">Brand Name</label>
     <input type="text" id="brand" name="brand" placeholder="" required>
