--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
   </form>
 
   <script>
-    document.getElementById('submissionForm').addEventListener('submit', function(e) {
+     document.getElementById('submissionForm').addEventListener('submit', function(e) {
       e.preventDefault();
 
       const brand = document.getElementById('brand').value;
@@ -129,25 +129,29 @@
         errorDiv.textContent = "";  // Clear error if validation passes
       }
 
-      const scriptUrl = 'https://script.google.com/macros/s/AKfycbwfFm_HKb0_fxR7e56NiL0dv512h-P40ClZzAn17UpzIQnhDi9AfDszmbiWO95u2tqgZw/exec';
+      const scriptUrl = 'https://script.google.com/macros/s/YOUR_DEPLOYED_SCRIPT_ID/exec';  // Your Google Apps Script deployment URL
 
       fetch(scriptUrl, {
-        redirect: "follow",
         method: 'POST',
-        mode: 'no-cors',
         body: JSON.stringify({ brand, url }),
         headers: {
           'Content-Type': 'application/json'
         }
       })
-      .then(() => {
-        successDiv.textContent = "Submission successful!";  // Show success message
-        successDiv.style.display = 'block';  // Make success message visible
-        document.getElementById('submissionForm').reset();  // Reset form
+      .then(response => response.json())  // Parse JSON response
+      .then(data => {
+        if (data.success) {
+          successDiv.textContent = "Submission successful!";  // Show success message
+          successDiv.style.display = 'block';  // Make success message visible
+          document.getElementById('submissionForm').reset();  // Reset form
+        } else {
+          successDiv.style.display = 'none';  // Hide success message if an error occurs
+          errorDiv.textContent = "There was an error. Please try again.";
+        }
       })
       .catch(error => {
         console.error('Error:', error);
-        alert('Error submitting form.');
+        errorDiv.textContent = "Error submitting form.";
       });
     });
   </script>
