--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: 'Poppins', sans-serif;  /* Modern font */
-      background-color: #f4f7f6;  /* Light background for better contrast */
+      font-family: 'Poppins', sans-serif;
+      background-color: #f4f7f6;
       margin: 0;
       padding: 0;
       display: flex;
@@ -47,13 +47,13 @@
 
     input:focus {
       outline: none;
-      border-color: #ff69b4;  /* pink border on focus */
+      border-color: #28a745;
     }
 
     button {
       width: 100%;
       padding: 12px;
-      background-color: #ff69b4;  /* Pink button */
+      background-color: #ff69b4;
       color: white;
       border: none;
       border-radius: 5px;
@@ -63,12 +63,7 @@
     }
 
     button:hover {
-      background-color: #ff4081;  /* Darker pink on hover */
-    }
-
-    button:disabled {
-      background-color: #ccc;
-      cursor: not-allowed;
+      background-color: #ff4081;
     }
 
     .error {
@@ -83,7 +78,6 @@
       font-size: 14px;
     }
 
-    /* Mobile responsiveness */
     @media (max-width: 600px) {
       form {
         padding: 20px;
@@ -94,42 +88,41 @@
 <body>
 
   <form id="submissionForm">
-    <h2>Image Folder Submission</h2>
+    <h2>Submit Brand Info</h2>
 
     <label for="brand">Brand Name</label>
-    <input type="text" id="brand" name="brand" placeholder="" required>
+    <input type="text" id="brand" name="brand" placeholder="Enter brand name" required>
 
     <label for="url">File Share Link</label>
-    <input type="url" id="url" name="url" placeholder="" required>
+    <input type="url" id="url" name="url" placeholder="Enter file share link" required>
 
     <div id="error" class="error"></div>
-    <div id="successMessage" class="success" style="display: none;"></div> <!-- Success message div -->
+    <div id="successMessage" class="success" style="display: none;"></div>
 
     <button type="submit" id="submitBtn">Submit</button>
   </form>
 
   <script>
-     document.getElementById('submissionForm').addEventListener('submit', function(e) {
+    document.getElementById('submissionForm').addEventListener('submit', function(e) {
       e.preventDefault();
 
       const brand = document.getElementById('brand').value;
       const url = document.getElementById('url').value;
       const errorDiv = document.getElementById('error');
-      const successDiv = document.getElementById('successMessage');  // Success message div
+      const successDiv = document.getElementById('successMessage');
       
-      // URL validation for Google Drive, Dropbox, SharePoint
       const validDomains = ['drive.google.com', 'dropbox.com', 'sharepoint.com'];
       const urlDomain = (new URL(url)).hostname;
 
       if (!validDomains.some(domain => urlDomain.includes(domain))) {
         errorDiv.textContent = "Invalid URL. Please use Google Drive, Dropbox, or SharePoint.";
-        successDiv.style.display = 'none';  // Hide success message
+        successDiv.style.display = 'none';
         return;
       } else {
-        errorDiv.textContent = "";  // Clear error if validation passes
+        errorDiv.textContent = "";
       }
 
-      const scriptUrl = 'https://script.google.com/macros/s/YOUR_DEPLOYED_SCRIPT_ID/exec';  // Your Google Apps Script deployment URL
+      const scriptUrl = 'https://script.google.com/macros/s/AKfycbwfFm_HKb0_fxR7e56NiL0dv512h-P40ClZzAn17UpzIQnhDi9AfDszmbiWO95u2tqgZw/exec';
 
       fetch(scriptUrl, {
         method: 'POST',
@@ -138,14 +131,14 @@
           'Content-Type': 'application/json'
         }
       })
-      .then(response => response.json())  // Parse JSON response
+      .then(response => response.json())
       .then(data => {
         if (data.success) {
-          successDiv.textContent = "Submission successful!";  // Show success message
-          successDiv.style.display = 'block';  // Make success message visible
-          document.getElementById('submissionForm').reset();  // Reset form
+          successDiv.textContent = "Submission successful!";
+          successDiv.style.display = 'block';
+          document.getElementById('submissionForm').reset();
         } else {
-          successDiv.style.display = 'none';  // Hide success message if an error occurs
+          successDiv.style.display = 'none';
           errorDiv.textContent = "There was an error. Please try again.";
         }
       })
