--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <h2>Submit Brand Info</h2>
 
     <label for="brand">Brand Name</label>
-    <input type="text" id="brand" name="brand" placeholder=" required>
+    <input type="text" id="brand" name="brand" placeholder="" required>
 
     <label for="url">File Share Link</label>
     <input type="url" id="url" name="url" placeholder="" required>
