--- a/index.html
+++ b/index.html
@@ -126,10 +126,7 @@
 
       fetch(scriptUrl, {
         method: 'POST',
-        cors: {
-          origin: [‘https://izzi-bl.github.io’, ‘http://localhost:5000’],
-          methods: ‘GET,HEAD,PUT,PATCH,DELETE’,
-          },
+        mode: 'cors',  // This enables CORS (Cross-Origin Resource Sharing)
         body: JSON.stringify({ brand, url }),
         headers: {
           'Content-Type': 'application/json'
