--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Submit Brand and File Share Link</title>
+  <title>Image Folder Submission Form</title>
   <!-- Google Fonts for modern typography -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
   <style>
@@ -88,7 +88,7 @@
 <body>
 
   <form id="submissionForm">
-    <h2>Submit Brand Info</h2>
+    <h2>Image Folder Submission</h2>
 
     <label for="brand">Brand Name</label>
     <input type="text" id="brand" name="brand" placeholder="" required>
